--- a/styles/home.scss
+++ b/styles/home.scss
@@ -12,11 +12,12 @@
 }
 
 .card_home{
-    background-color: white;
+    background: #040468;
+    box-shadow:  24px -24px 16px #030348,
+             -24px 24px 16px #050588;
     height: 500px;
     border-radius: 15px;
     width: 350px;
-    border: 4px solid rgb(28, 255, 244);
 }
 
 .container_home{
@@ -30,11 +31,14 @@
 
 .titre_card_home{
     text-align: center;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid rgb(255, 255, 255);
+    h3{
+        color: white;
+    }
 }
 
 .icon_check{
-    color: rgb(3, 117, 3);
+    color: rgb(0, 218, 0);
     padding-right: 5px;
 }
 
@@ -51,6 +55,7 @@
 .p_check{
     display: flex;
     align-items: center;
+    color: white;
 }
 
 .button_discord{
@@ -61,6 +66,7 @@
     font-size: 20px;
     padding: 1.2rem;
     border-radius: 15px;
+    
 }
 
 .container_button{
@@ -77,10 +83,11 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    color: white;
 }
 
 .container_home2{
-    padding-top: 2rem;
+    padding-top: 4rem;
     display: flex;
     justify-content: center;
 }
