ajout texte histoire

--- a/styles/action.scss
+++ b/styles/action.scss
@@ -29,6 +29,9 @@
     flex-wrap: wrap;
     justify-content: center;
     padding-bottom: 2rem;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card_actions:hover{
