changement couleur discord

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -59,10 +59,10 @@
 }
 
 .button_discord{
-    background-color: rgb(4, 4, 104);
+    background-color: rgb(255, 255, 255);
     display: flex;
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 20px;
     padding: 1.2rem;
     border-radius: 15px;
