--- a/styles/header.scss
+++ b/styles/header.scss
@@ -38,3 +38,22 @@
     color: transparent;
 }
 
+.responsive_mob{
+    display: none;
+}
+
+@media screen and (max-width: 900px) {
+    .responsive_mob{
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        background-color: white;
+        z-index: 999;
+        text-align: center;
+    }
+}
