--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,7 @@
 @import "/styles/home.scss";
 @import "/styles/header.scss";
 @import "/styles/histoire.scss";
+@import "/styles/footer.scss";
 @import "/styles/action.scss";
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;600;700&display=swap');
 body{
