--- a/styles/action.scss
+++ b/styles/action.scss
@@ -17,8 +17,10 @@
 }
 
 .card_actions{
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    box-shadow:  20px 20px 45px #afafaf,
+             -20px -20px 45px #ffffff;
     transition: all .4s ease;
+    border-radius: 50px;
     cursor: pointer;
 }
 
