--- a/styles/histoire.scss
+++ b/styles/histoire.scss
@@ -1,6 +1,6 @@
 .h2_histoire{
     margin: 0;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 32px;
 }
 
@@ -21,7 +21,8 @@
 .div_histoire_pair{
     display: flex;
     justify-content: space-between;
-    color: white;
+    color: rgb(0, 0, 0);
+    align-items: center;
 }
 
 .div_histoire_unpair{
@@ -29,9 +30,13 @@
     padding-bottom: 2rem;
     display: flex;
     justify-content: space-between;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .container_p_histoire{
     width: 60%;
+}
+
+.img_histoire{
+    object-fit: cover;
 }
