--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,22 +1,23 @@
 .home_gitan{
-    background-color: rgb(18, 2, 107);
+    background-color: #e0e0e0;
     min-height: calc(100vh - 162px);
 }
 
 .h1_home{
     margin: 0;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding-top: 2rem;
     font-size: 40px;
 }
 
 .card_home{
-    background: #040468;
-    box-shadow:  24px -24px 16px #030348,
-             -24px 24px 16px #050588;
+    background: #e0e0e0;
+    box-shadow:  20px 20px 60px #b1b1b1,
+             -20px -20px 60px #ffffff;
+    
     height: 500px;
-    border-radius: 15px;
+    border-radius: 17px;
     width: 350px;
 }
 
@@ -31,9 +32,13 @@
 
 .titre_card_home{
     text-align: center;
-    border-bottom: 3px solid rgb(255, 255, 255);
+    background: #302f8f;
+    border-radius: 16px 16px 0 0 ;
+    padding: 1rem;
+    border-bottom: 3px solid rgb(0, 0, 0);
     h3{
-        color: white;
+        color: rgb(255, 255, 255);
+        margin: 0;
     }
 }
 
@@ -55,18 +60,21 @@
 .p_check{
     display: flex;
     align-items: center;
-    color: white;
+    color: rgb(0, 0, 0);
 }
-
+.icon_discord{
+    font-size: 70px;
+    color: #302f8f;
+}
 .button_discord{
-    background-color: rgb(255, 255, 255);
     display: flex;
     text-decoration: none;
-    color: black;
     font-size: 20px;
-    padding: 1.2rem;
-    border-radius: 15px;
-    
+    transition: all .4s ease;
+}
+
+.button_discord:hover{
+    transform: scale(1.20);
 }
 
 .container_button{
@@ -83,11 +91,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .container_home2{
     padding-top: 4rem;
+    padding-bottom: 4rem;
     display: flex;
     justify-content: center;
 }
